# MiniTrader

./: .clang-format  AGENTS.md  CMakeLists.txt
.github/prompts/: design-exercise.prompt.md
.github/skills/low-latency-review/: SKILL.md
include/domain/: messages.hpp  order.hpp  trade.hpp  types.hpp
include/interfaces/: i_matching_engine.hpp  i_order_book.hpp
include/order_book/: level.hpp  order_book.hpp
src/order_book/: order_book.cpp
src/tests/: domain_test.cpp  interfaces_test.cpp
